Password reset pages & more features: - New $this->render() method - Password reset pages - Tailwind CSS scaffold - New styles for buttons, inputs, alerts - Changed to shorthand syntax for language file (en) - Added app.css and app.js which will be main endpoint - Added new 'theme' field inside of ninja.php - Scaffold for 'ninja2020' theme: both client and global theme - Ignoring local builds of assets, until purgeCSS is there - Overall cleanup

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,12 @@
 @tailwind base;
 
+// ..
 @tailwind components;
-@import 'components/buttons';
 
+@import 'components/buttons';
+@import 'components/validation';
+@import 'components/inputs';
+@import 'components/alerts';
+
+// ..
 @tailwind utilities;
