(Daily sync) Password reset pages & client portal rework (#3492)
* Dependency clearing

* Tailwind & templates cleanup

* Password reset pages & more features:
- New $this->render() method
- Password reset pages
- Tailwind CSS scaffold
- New styles for buttons, inputs, alerts
- Changed to shorthand syntax for language file (en)
- Added app.css and app.js which will be main endpoint
- Added new 'theme' field inside of ninja.php
- Scaffold for 'ninja2020' theme: both client and global theme
- Ignoring local builds of assets, until purgeCSS is there
- Overall cleanup

* Switch back default template to 'default'

* Remove app.css build

* Fix Codacy

* Fix Codacy 'doublequote' issues

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,14 +1,12 @@
+@tailwind base;
 
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+// ..
+@tailwind components;
 
-// Variables
-@import 'variables';
+@import 'components/buttons';
+@import 'components/validation';
+@import 'components/inputs';
+@import 'components/alerts';
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
-
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
+// ..
+@tailwind utilities;
