Client dashboard, sidebar, PortalComposer.php

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,5 +8,9 @@
 @import 'components/inputs';
 @import 'components/alerts';
 
+.active-page {
+    @apply bg-blue-900 #{!important};
+}
+
 // ..
 @tailwind utilities;
