Personal page & update for details

--- a/resources/sass/components/buttons.scss
+++ b/resources/sass/components/buttons.scss
@@ -1,5 +1,5 @@
 .button {
-    @apply rounded py-3 px-4;
+    @apply rounded py-3 px-4 text-sm leading-4 transition duration-150 ease-in-out font-semibold;
 }
 
 .button-primary {
