--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,7 @@
 @import 'components/validation';
 @import 'components/inputs';
 @import 'components/alerts';
+@import 'components/badge';
 
 .active-page {
     @apply bg-blue-900 #{!important};
