[V2] Client portal rework (#3516)
* Client login, reset and update password page

* Client dashboard, sidebar, PortalComposer.php

* wip

* Personal page & update for details

* Invoices, paying & pagination.blade.php

* Invoices, recurring invoice & buttons

* Payments, link component

* Payment methods

* Breadcrums, clean up & wrap up

* Remove format_date() method to formatDate on object

* Payments
- $this->render is now proxy for render()
- Removed logic from Controller.php to ClientPortal.php
- Added MakesDates to ClientGatewayToken.php
- StripePaymentDriver.php now returns correct views
- Refactor of adding new payment method
- Ignoring all local builds for public/js/clients/*

* Signature, wip

* Fix "Pay now" on single invoice

* Payments:
- Added ProcessInvoicesInBulk request class
- Refactor InvoiceController::bulk()
- Displaying terms & payments
- New signature.blade.php
- Removed comment from webpack.mix.js

* Quotes:
- Refactor ProcessInvoicesInBulk.php to ProcessInvoicesInBulkRequest.php
- Add new 'Quotes' field inside of PortalComposer.php
- Added MakesDates to Quote.php
- Added Quote::badgeForStatus()
- Cleanup payment.blade.php
- Quote showing and approving
- New resource 'quotes' in client.php
- New image for quotes, align-left.svg

* Credits:
- New 'credits' resource in client.php
- Fixes for client.php typo

* Breadcrumbs:
- Quotes
- Credits

* Placeholder for translations.

* Restore whereIn & client scope

Co-authored-by: David Bomba <turbo124@gmail.com>

--- a/resources/sass/components/buttons.scss
+++ b/resources/sass/components/buttons.scss
@@ -1,5 +1,5 @@
 .button {
-    @apply rounded py-3 px-4;
+    @apply rounded py-3 px-4 text-sm leading-4 transition duration-150 ease-in-out font-semibold;
 }
 
 .button-primary {
@@ -12,4 +12,32 @@
 
 .button-block {
     @apply block w-full;
+}
+
+.button-danger {
+    @apply bg-red-500 text-white;
+
+    &:hover {
+        @apply bg-red-600;
+    }
+}
+
+.button-secondary {
+    @apply bg-gray-100;
+
+    &:hover {
+        @apply bg-gray-200;
+    }
+}
+
+.button-link {
+    @apply text-blue-600;
+
+    &:hover {
+        @apply text-blue-700 underline;
+    }
+
+    &:focus {
+        @apply outline-none underline;
+    }
 }
