--- a/resources/sass/components/inputs.scss
+++ b/resources/sass/components/inputs.scss
@@ -1,5 +1,5 @@
 .input {
-    @apply items-center border border-gray-300 rounded mt-2 w-full py-3 px-4;
+    @apply items-center border border-gray-300 rounded mt-2 w-full py-2 px-4 text-sm;
 
     &:focus {
         @apply outline-none border-blue-500;
@@ -8,4 +8,8 @@
 
 .input-label {
     @apply text-sm text-gray-600;
+}
+
+.input-slim {
+    @apply py-2;
 }
