--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,4 @@
+/* purgecss start ignore */
 @tailwind base;
 
 // ..
@@ -13,5 +14,5 @@
     @apply bg-blue-900 #{!important};
 }
 
-// ..
+/* purgecss end ignore */
 @tailwind utilities;
