--- a/resources/sass/components/datatables.scss
+++ b/resources/sass/components/datatables.scss
@@ -1,37 +1,45 @@
-.dataTables_wrapper.no-footer {
-    @apply bg-gray-50 #{!important};
-}
-
-.dataTables_wrapper select,
-.dataTables_wrapper .dataTables_filter input {
-    @apply text-gray-700 px-4 py-2 #{!important};
-}
-
 .dataTables_length {
-    @apply p-3 #{!important};
-}
+    @screen sm {
+        @apply my-5 #{!important};
+    }
 
-.dataTables_filter {
-    @apply p-3 #{!important};
+    @screen lg {
+        @apply my-4 #{!important};
+    }
 
-    input {
-        @apply items-center border border-gray-300 rounded px-4 text-sm py-1 #{!important};
+    select {
+        @apply bg-white input py-2 mx-2 px-2 #{!important};
     }
 }
 
-table.dataTable thead th,
-table.dataTable thead td {
-    @apply border-b border-gray-200 #{!important};
-}
+.dataTables_filter {
+    @apply mb-4;
 
-.dataTables_info {
-    @apply p-3 text-sm #{!important};
+    input {
+        @apply form-input input #{!important};
+    }
+
+    @screen lg {
+        @apply -mt-12 #{!important};
+    }
 }
 
 .dataTables_paginate {
+    @apply pb-6 pt-2 #{!important};
+
+    .paginate_button {
+        @apply button bg-white border border-gray-300 text-sm leading-4 font-medium rounded text-gray-700 mr-1 py-2 cursor-pointer #{!important};
+    }
+
+    .current {
+        @apply bg-blue-600 text-white #{!important};
+    }
+}
+
+.dataTables_info {
     @apply text-sm #{!important};
 }
 
-.dataTable.no-footer {
-    @apply border-none #{!important};
+.dataTables_empty {
+    @apply py-4 #{!important};
 }
